Updated CSS to fix scroll bounce on mobile safari resulting in the menu hiding the controls

--- a/frontend/src/components/All.css
+++ b/frontend/src/components/All.css
@@ -516,6 +516,9 @@ button:focus {
   .reader-container {
     width: 100vw;
   }
+  .reader-content {
+    margin-top: 30px;
+  }
   .wrapper-div {
     margin-top: 30px;
   }
